Update main page

--- a/src/endpoints/pages/index.html
+++ b/src/endpoints/pages/index.html
@@ -5,6 +5,7 @@
   <title>Fractals api</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="/fractals/Mandelbrot?width=64&height=64&zoom=100&position_x=-1.4">
 </head>
 
 <body>
@@ -28,21 +29,21 @@
       <li>
         fractals.ciubix.xyz/fractals/Mandelbrot:
         <br>
-        <img src="https://fractals.ciubix.xyz/fractals/Mandelbrot" alt="Image from GET request">
+        <img src="/fractals/Mandelbrot" alt="Image from GET request">
       </li>
       <li>
         You can also specify things like image dimensions
         <br>
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256:
         <br>
-        <img src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256" alt="Image from GET request">
+        <img src="/fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256" alt="Image from GET request">
       </li>
       <li>
         Position
         <br>
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05:
         <br>
-        <img src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05"
+        <img src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05"
           alt="Image from GET request">
       </li>
       <li>
@@ -51,7 +52,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10"
           alt="Image from GET request">
       </li>
       <li>
@@ -61,7 +62,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000"
           alt="Image from GET request">
       </li>
       <li>
@@ -70,7 +71,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088"
           alt="Image from GET request">
       </li>
       <li>
@@ -80,7 +81,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150"
           alt="Image from GET request">
       </li>
       <li>
@@ -90,7 +91,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10"
           alt="Image from GET request">
       </li>
       <li>
@@ -100,7 +101,7 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true"
           alt="Image from GET request">
       </li>
       <li>
@@ -110,10 +111,26 @@
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true&debug=true:
         <br>
         <img
-          src="https://fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true&debug=true"
+          src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true&debug=true"
           alt="Image from GET request">
       </li>
     </ul>
+    <p>
+        The default values for the parameters are 
+        <ul>
+          <li>width: 1920</li>
+          <li>height: 1080</li>
+          <li>position_x: -0.75</li>
+          <li>position_y: 0.0</li>
+          <li>zoom: 1.0</li>
+          <li>max_iterations: 1000</li>
+          <li>colors: 55cdfc,f7a8b8,ffffff,f7a8b8,55cdfc </li>
+          <li>num_colors: 200</li>
+          <li>msaa: 1</li>
+          <li>smooth: false</li>
+          <li>debug: false</li>
+        </ul>
+    </p>
     <p>
       There's currently no caching so please be mindful that every time you do a request the gpu has to render a new
       image
