--- a/src/endpoints/pages/index.html
+++ b/src/endpoints/pages/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1>Hi</h1>
+  <h1>Fractals API</h1>
   <p>This is a web api for getting custom fractal images with a web request </p>
   <p>You can check out the source code <a href="https://github.com/Ciubix8513/fractals_api">here</a></p>
   <p>Currently contains most of the features I planned to have
@@ -36,7 +36,7 @@
         <br>
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256:
         <br>
-        <img src="/fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256" alt="Image from GET request">
+        <img src="/fractals/Mandelbrot?width=256&height=256" alt="Image from GET request">
       </li>
       <li>
         Position
@@ -76,7 +76,7 @@
       </li>
       <li>
         Number of colors used by the coloring algorithm (explained <a
-          href="https://fractals.ciubix.xyz/coloring">here</a>)
+          href="/coloring">here</a>)
         <br>
         fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150:
         <br>
