Update main page

--- a/src/endpoints/pages/index.html
+++ b/src/endpoints/pages/index.html
@@ -18,7 +18,14 @@
     <li>Customizable position, zoom</li>
     <li>Customizable image dimensions</li>
   </ul>
-  Currently only has 1 fractal, the Mandelbrot set, however more will be added soon.
+  Currently contains the following fractals:
+  <ul>
+    <li> Mandelbrot set (z^2 + c) </li>
+    <li> Burning ship (abs(z)^2 + c) </li>
+    <li> Tricorn (conj(z)^2 + c) </li>
+    <li> Feather ((z^3 / 1 + z * z) + c) </li>
+    <li> Eye ((z/c)^2 - c) </li>
+  </ul>
   </p>
   <div>
     To get an image you can simply do a get request on https://fractal.ciubix.xyz/fractals/"Name of the fractal here".
