--- a/src/endpoints/pages/index.html
+++ b/src/endpoints/pages/index.html
@@ -29,26 +29,26 @@
   </ul>
   </p>
   <div>
-    To get an image you can simply do a get request on https://fractal.ciubix.xyz/fractals/"Name of the fractal here".
+    To get an image you can simply do a get request on https://fractal.luna.graphics/fractals/"Name of the fractal here".
     <br>
     Here's some examples
     <ul>
       <li>
-        fractals.ciubix.xyz/fractals/Mandelbrot:
+        fractals.luna.graphics/fractals/Mandelbrot:
         <br>
         <img src="/fractals/Mandelbrot" alt="Image from GET request">
       </li>
       <li>
         You can also specify things like image dimensions
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256:
         <br>
         <img src="/fractals/Mandelbrot?width=256&height=256" alt="Image from GET request">
       </li>
       <li>
         Position
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05:
         <br>
         <img src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05"
           alt="Image from GET request">
@@ -56,7 +56,7 @@
       <li>
         Zoom
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10"
@@ -66,7 +66,7 @@
         Maximum number of iterations (for more information check out <a
           href="https://en.wikipedia.org/wiki/Plotting_algorithms_for_the_Mandelbrot_set">this article</a> on wikipedia)
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000"
@@ -75,7 +75,7 @@
       <li>
         Colors of the fractal, specified in form of hex without the #
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088"
@@ -85,7 +85,7 @@
         Number of colors used by the coloring algorithm (explained <a
           href="/coloring">here</a>)
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150"
@@ -95,7 +95,7 @@
         Anti aliasing, up to 255, but PLEASE keep this low unless absolutely necessary, my server may actually crash if
         that number is too high
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10"
@@ -105,7 +105,7 @@
         Turn on smooth coloring algorithm (for more detail see <a
           href="https://iquilezles.org/articles/msetsmooth/">this great article</a> by Inigo Quilez)
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true"
@@ -115,7 +115,7 @@
         In case you're trying to find the exact position where you want to be you can turn on debug, which will render a
         helper grid with step size of .1
         <br>
-        fractals.ciubix.xyz/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true&debug=true:
+        fractals.luna.graphics/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&msaa=10&smooth=true&debug=true:
         <br>
         <img
           src="/fractals/Mandelbrot?width=256&height=256&position_x=-1.5&position_y=-.05&zoom=10&max_iterations=2000&colors=e50000,ff8d00,ffee00,028121,004cff,770088&num_colors=150&,msaa=10&smooth=true&debug=true"
